--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,4 +4,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/Users/MengYe/.netbeans/6.8/build.properties
+user.properties.file=/Users/rmy/.netbeans/7.0/build.properties
