--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -67,7 +67,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project
 # (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value
 # or test-sys-prop.name=value to set system properties for unit tests):
-run.jvmargs=-Xmx2g -Xms1g
+run.jvmargs=-Xmx2g -Xms1g -Djava.security.policy=applet.policy
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
