make the new entry point. stopped using single frame application.

--- a/lib/nblibraries.properties
+++ b/lib/nblibraries.properties
@@ -1,5 +1,8 @@
 libs.CopyLibs.classpath=\
     ${base}/CopyLibs/org-netbeans-modules-java-j2seproject-copylibstask.jar
+libs.JWSAntTasks.classpath=\
+    ${base}/JWSAntTasks/org-netbeans-modules-javawebstart-anttasks.jar
+libs.JWSAntTasks.displayName=JWS Ant Tasks
 libs.swing-app-framework.classpath=\
     ${base}/swing-app-framework/appframework-1.0.3.jar:\
     ${base}/swing-app-framework/swing-worker-1.1.jar
