--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,6 +1,8 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
+ant.customtasks.libs=JWSAntTasks
 application.desc=An automatic solution to a classic game Tetris
 application.homepage=
 application.title=AutoTetris
@@ -26,7 +28,9 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.swing-app-framework.classpath}:\
     ${libs.swing-layout.classpath}
@@ -51,12 +55,20 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jnlp.applet.class=autotetris.AutoTetrisApplet
+jnlp.applet.height=300
+jnlp.applet.width=300
 jnlp.codebase.type=local
+jnlp.codebase.url=$$$$codebase
 jnlp.descriptor=application
-jnlp.enabled=false
+jnlp.enabled=true
+jnlp.mixed.code=default
 jnlp.offline-allowed=false
-jnlp.signed=false
-main.class=autotetris.AutoTetrisApp
+jnlp.signed=true
+jnlp.signing=generated
+jnlp.signing.alias=
+jnlp.signing.keystore=
+main.class=autotetris.AutoTetrisEntry
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
