clean and annotate 2

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -61,7 +61,7 @@ jnlp.applet.width=300
 jnlp.codebase.type=local
 jnlp.codebase.url=$$$$codebase
 jnlp.descriptor=application
-jnlp.enabled=true
+jnlp.enabled=false
 jnlp.mixed.code=default
 jnlp.offline-allowed=false
 jnlp.signed=true
