--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,4 +4,5 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/Users/rmy/.netbeans/7.1.1/build.properties
+jaxbwiz.endorsed.dirs=/local/packages/netbeans-6.8/ide12/modules/ext/jaxb/api
+user.properties.file=/u/a/renmengy/.netbeans/6.8/build.properties
