--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -55,6 +55,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jaxbwiz.endorsed.dirs="${netbeans.home}/../ide12/modules/ext/jaxb/api"
 jnlp.applet.class=autotetris.AutoTetrisApplet
 jnlp.applet.height=300
 jnlp.applet.width=300
