--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -5,4 +5,4 @@ do.jar=true
 javac.debug=true
 javadoc.preview=true
 jaxbwiz.endorsed.dirs=/local/packages/netbeans-6.8/ide12/modules/ext/jaxb/api
-user.properties.file=/Users/rmy/.netbeans/7.1.1/build.properties
+user.properties.file=/u/a/renmengy/.netbeans/6.8/build.properties
