web start+sleep interval.  future bug regarding sleep in the loop.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -59,10 +59,12 @@ jaxbwiz.endorsed.dirs="${netbeans.home}/../ide12/modules/ext/jaxb/api"
 jnlp.applet.class=autotetris.AutoTetrisApplet
 jnlp.applet.height=300
 jnlp.applet.width=300
-jnlp.codebase.type=local
+jnlp.codebase.type=user
 jnlp.codebase.url=$$$$codebase
+jnlp.codebase.user=http://rmy.zapto.org/autotetris/
 jnlp.descriptor=application
-jnlp.enabled=false
+jnlp.enabled=true
+jnlp.icon=
 jnlp.mixed.code=default
 jnlp.offline-allowed=false
 jnlp.signed=true
