--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,6 +1,5 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 ant.customtasks.libs=JWSAntTasks
 application.desc=An automatic solution to a classic game Tetris
@@ -63,7 +62,7 @@ jnlp.codebase.type=user
 jnlp.codebase.url=$$$$codebase
 jnlp.codebase.user=http://rmy.zapto.org/autotetris/
 jnlp.descriptor=application
-jnlp.enabled=true
+jnlp.enabled=false
 jnlp.icon=
 jnlp.mixed.code=default
 jnlp.offline-allowed=false
@@ -82,7 +81,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project
 # (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value
 # or test-sys-prop.name=value to set system properties for unit tests):
-run.jvmargs=-Xmx2g -Xms1g -Djava.security.policy=applet.policy
+run.jvmargs=-Xmx128m -Xms10m -Djava.security.policy=applet.policy
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
