new human example phase teacher set up 1

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,6 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 ant.customtasks.libs=JWSAntTasks
 application.desc=An automatic solution to a classic game Tetris
@@ -58,11 +59,11 @@ jaxbwiz.endorsed.dirs="${netbeans.home}/../ide12/modules/ext/jaxb/api"
 jnlp.applet.class=autotetris.AutoTetrisApplet
 jnlp.applet.height=300
 jnlp.applet.width=300
-jnlp.codebase.type=user
+jnlp.codebase.type=local
 jnlp.codebase.url=$$$$codebase
 jnlp.codebase.user=http://rmy.zapto.org/autotetris/
 jnlp.descriptor=application
-jnlp.enabled=false
+jnlp.enabled=true
 jnlp.icon=
 jnlp.mixed.code=default
 jnlp.offline-allowed=false
