display score using text

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -63,7 +63,7 @@ jnlp.codebase.type=local
 jnlp.codebase.url=$$$$codebase
 jnlp.codebase.user=http://rmy.zapto.org/autotetris/
 jnlp.descriptor=application
-jnlp.enabled=true
+jnlp.enabled=false
 jnlp.icon=
 jnlp.mixed.code=default
 jnlp.offline-allowed=false
