--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -5,4 +5,4 @@ do.jar=true
 javac.debug=true
 javadoc.preview=true
 jaxbwiz.endorsed.dirs=/local/packages/netbeans-6.8/ide12/modules/ext/jaxb/api
-user.properties.file=C:\\Users\\rmy\\AppData\\Roaming\\NetBeans\\7.2\\build.properties
+user.properties.file=C:\\Users\\t-mren\\AppData\\Roaming\\NetBeans\\7.2\\build.properties
